examples/test/testpolicy5668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5668
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key40: value46
      key30: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value16
          key41: value15
          key40: value33
      podSelector:
        matchLabels:
          key12: value28
          key9: value18
          key30: value19
